data/derived/fa15/progs/unify/prog1063.ml.out
Characters 88-103:
  | VarX -> "x"^exprToString e'
                ^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
